GCTV & scroll event

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -35,6 +35,8 @@
                         </section>
                     {% endfor %}
                 {% endfor %}
+                
+                <h1>{% block headerTitle %}{% endblock %}</h1>
                         
 		        <a id="get_ruban" href=""></a>
 		        <a id="get_param" href=""></a>
