--- a/src/gospelcenter/MediaBundle/Resources/views/Media/home.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/home.html.twig
@@ -9,8 +9,8 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Gospel Center TV</h1>
-    
+
+    <a class="title" href="{{ path('gospelcenterMedia') }}"><span>Gospel Center</span> <em>TV</em></a>
     
     <section class="sliderTop slider" id="1">
         
