--- a/src/gospelcenter/PageBundle/Resources/views/PageGlobal/tv.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/PageGlobal/tv.html.twig
@@ -17,7 +17,7 @@
     <section class="custom">
         <h1>Gospel Center TV</h1>
         
-        <section class="sliderFull slider" id="10">
+        <section class="sliderFull slider" id="tv">
             
             {% if starsVideos|length > 1 %}<div id="left" class="arrow black"></div>{% endif %}
         
