--- a/web/sass/font.scss
+++ b/web/sass/font.scss
@@ -1,4 +1,6 @@
 $font-regular: 'Radikal', sans-serif;
 $font-light: 'Radikal-Light', 'Radikal', sans-serif;
+$font-thin: 'Radikal-UltraThin', 'Radikal-Light', 'Radikal', sans-serif;
 $font-medium: 'Radikal-Medium', 'Radikal', sans-serif;
 $font-bold: 'Radikal-Bold', 'Radikal', sans-serif;
+$font-black: 'Radikal-Black', 'Radikal-Bold', 'Radikal', sans-serif;
