--- a/src/gospelcenter/MediaBundle/Resources/views/Media/audio.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/audio.html.twig
@@ -8,43 +8,34 @@
     {{ parent() }}
 {% endblock %}
 
-{% block body %}
-    
-    {% set speakers = '' %}
-            
-    {% for key, speaker in audio.celebration.speakers %}
-        
-        {% if key != 0 and key != (celebration.speakers|length -1) %}
-            {% set speakers = speakers ~ ', '%}
-        {% elseif key != 0 and key == (celebration.speakers|length -1) %}
-            {% set speakers = speakers ~ ' et '%}
-        {% endif %}
-        
-        {% set speakers = speakers ~ speaker.person.firstname ~ ' ' ~ speaker.person.lastname %}
-        
-    {% endfor %}
-    
-    <header class="tv">
-        <div>
-            <nav class="left">
-                {% if previousUrl %}<a id="back" href="{{ previousUrl }}">{{ previousLabel }}</a>{% endif %}
-            </nav>
-            
-            <h1>{% if audio.celebration.title|length %}{{ audio.celebration.title }}{% else %}Celebration{% endif %}</h1>
-            
-            <nav class="right">
-            
-            </nav>
-        </div>
-    </header>
+{% block headerTitle %}{% if audio.celebration.title|length %}{{ audio.celebration.title }}{% else %}Celebration{% endif %}{% endblock %}
 
+{% block tvHeader %}
+
+    <nav class="left">
+        {% if previousUrl %}<a id="back" href="{{ previousUrl }}">{{ previousLabel }}</a>{% endif %}
+    </nav>
     
+    <h1>{% if audio.celebration.title|length %}{{ audio.celebration.title }}{% else %}Celebration{% endif %}</h1>
+    
+    <nav class="right">
+    
+    </nav>
+    
+{% endblock %}
+
+{% block tv_body %}
     <section class="audio">
     
         <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/119935095&amp;color=d91a15&amp;auto_play=true&amp;hide_related=false&amp;show_artwork=true"></iframe>
-        <h2>{{ speakers }}</h2>
         <time>{{ audio.celebration.startingDate|date('d F Y') }}</time>
         
+        {% for speaker in audio.celebration.speakers %}
+            <a href="{{ path('gospelcenterMedia_speaker', {'speaker': speaker.person.id}) }}">
+                <h2>{{ speaker.person.firstname }} {{ speaker.person.lastname }}</h2>
+                <p>{{ speaker.person.function }}</p>
+            </a>
+        {% endfor %}
+        
     </section>
-
 {% endblock %}
