--- a/src/gospelcenter/MediaBundle/Resources/views/Media/video.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/video.html.twig
@@ -8,42 +8,34 @@
     {{ parent() }}
 {% endblock %}
 
-{% block body %}
-    
-    {% set speakers = '' %}
-            
-    {% for key, speaker in video.celebration.speakers %}
-        
-        {% if key != 0 and key != (video.celebration.speakers|length -1) %}
-            {% set speakers = speakers ~ ', '%}
-        {% elseif key != 0 and key == (video.celebration.speakers|length -1) %}
-            {% set speakers = speakers ~ ' et '%}
-        {% endif %}
-        
-        {% set speakers = speakers ~ speaker.person.firstname ~ ' ' ~ speaker.person.lastname %}
-        
-    {% endfor %}
-    
-    <header class="tv">
-        <div>
-            <nav class="left">
-                {% if previousUrl %}<a id="back" href="{{ previousUrl }}">{{ previousLabel }}</a>{% endif %}
-            </nav>
-            
-            <h1>{% if video.celebration.title|length %}{{ video.celebration.title }}{% else %}Celebration{% endif %}</h1>
-            
-            <nav class="right">
-            
-            </nav>
-        </div>
-    </header>
+{% block headerTitle %}{% if video.celebration.title|length %}{{ video.celebration.title }}{% else %}Celebration{% endif %}{% endblock %}
 
+{% block tvHeader %}
+
+    <nav class="left">
+        {% if previousUrl %}<a id="back" href="{{ previousUrl }}">{{ previousLabel }}</a>{% endif %}
+    </nav>
+    
+    <h1>{% if video.celebration.title|length %}{{ video.celebration.title }}{% else %}Celebration{% endif %}</h1>
+    
+    <nav class="right">
+    
+    </nav>
+    
+{% endblock %}
+
+{% block tv_body %}
     <section class="video">
     
         <iframe src="//player.vimeo.com/video/{{ video.ownerId }}?title=0&amp;byline=0&amp;portrait=0&amp;color=d91a15&amp;autoplay=1" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        <h2>{{ speakers }}</h2>
         <time>{{ video.celebration.startingDate|date('d F Y') }}</time>
         
+        {% for speaker in video.celebration.speakers %}
+            <a href="{{ path('gospelcenterMedia_speaker', {'speaker': speaker.person.id}) }}">
+                <h2>{{ speaker.person.firstname }} {{ speaker.person.lastname }}</h2>
+                <p>{{ speaker.person.function }}</p>
+            </a>
+        {% endfor %}
+        
     </section>
-
 {% endblock %}
