--- a/src/gospelcenter/PageBundle/Resources/views/PageGlobal/index.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/PageGlobal/index.html.twig
@@ -18,7 +18,7 @@
         
         {% if article.template == 'full' %}
             
-            <section class="slider vertical" id="1">
+            <section class="slider vertical" id="{{ article.ref }}">
         
                 {% if article.slides|length > 1  %}
                     
@@ -69,7 +69,7 @@
         
             <h2>{{ article.slogan }}</h2>
             
-            <section class="slider" id="5">
+            <section class="slider" id="{{ article.ref }}">
         
                 {% if article.slides|length > 1  %}<div id="left" class="arrow"></div>{% endif %}
                 
