--- a/web/css/adminEvents.css
+++ b/web/css/adminEvents.css
@@ -1,1 +1,50 @@
-#container article.events{max-width:1024px;margin:30px auto 10px;overflow:auto;height:100px;border:1px solid #313131;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px}#container article.events section.picture{float:left;height:100%}#container article.events section.picture img{width:190px;float:right;margin-right:10px}@media only screen and (min-width: 1441px){#container article.events{max-width:1100px;height:100px}}@media only screen and (min-width: 1701px){#container article.events{max-width:1150px;height:120px}#container article.events section.picture img{width:230px}}@media only screen and (min-width: 1921px){#container article.events{max-width:1300px;height:130px}#container article.events section.picture img{width:250px}}#container article.events section.detail{width:75%;float:left}#container article.events section.detail h1{padding-top:8px;margin-top:0}#container article.events section.detail article.desc{width:30%;display:block;float:left}#container article.events section.detail article.desc time{display:block}#container article.events section.detail nav{float:right;width:40%;margin-top:0px}
+#container article.events {
+  max-width: 1024px;
+  margin: 30px auto 10px;
+  overflow: auto;
+  height: 100px;
+  border: 1px solid #313131;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px; }
+  #container article.events section.picture {
+    float: left;
+    height: 100%; }
+    #container article.events section.picture img {
+      width: 190px;
+      float: right;
+      margin-right: 10px; }
+  @media only screen and (min-width: 1441px) {
+    #container article.events {
+      max-width: 1100px;
+      height: 100px; } }
+  @media only screen and (min-width: 1701px) {
+    #container article.events {
+      max-width: 1150px;
+      height: 120px; }
+      #container article.events section.picture img {
+        width: 230px; } }
+  @media only screen and (min-width: 1921px) {
+    #container article.events {
+      max-width: 1300px;
+      height: 130px; }
+      #container article.events section.picture img {
+        width: 250px; } }
+  #container article.events section.detail {
+    width: 75%;
+    float: left; }
+    #container article.events section.detail h1 {
+      padding-top: 8px;
+      margin-top: 0; }
+    #container article.events section.detail article.desc {
+      width: 30%;
+      display: block;
+      float: left; }
+      #container article.events section.detail article.desc time {
+        display: block; }
+    #container article.events section.detail nav {
+      float: right;
+      width: 40%;
+      margin-top: 0px; }
